translate 01_04_old_storage category

--- a/Belarusian.lang
+++ b/Belarusian.lang
@@ -536,40 +536,40 @@
     <Entry Name="YouAreDead">Death is the final unknown</Entry>
   </CATEGORY>
   <CATEGORY Name="01_04_old_storage">
-    <Entry Name="EventPickZippo">If this lighter wasn't empty, it'd be a handy thing to have.</Entry>
-    <Entry Name="EventLockedDoor01">Locked from the other side. That... does that mean there's someone still inside?! I can hear chattering! Thank God, maybe I can get some answers! Why won't he open the door?</Entry>
-    <Entry Name="EventMonsterBlood">I... I think someone's been dragged through here... I've never seen this much blood before. I... that was my best chance to get some answers. Who else is still down here?!</Entry>
-    <Entry Name="DescValve">Sounds like there's a minor leak coming from these steam pipes.</Entry>
-    <Entry Name="WarningSteam">That steam could blister flesh from bone in an instant. I know, I've seen it happen.</Entry>
-    <Entry Name="DescTunnel">It looks as if this basement caved in some years ago. Something's tunnelled through here more recently though... Christ, what sort of creature makes these markings?</Entry>
+    <Entry Name="EventPickZippo">Калі б гэтая запальнічка не была пустой, было б зручна мець яе пад рукой.</Entry>
+    <Entry Name="EventLockedDoor01">Зачынена з іншага боку. Гэта... Гэта азначае, што нехта ўсё яшчэ ўнутры?! Я чую балбатню! Дзякуй богу, магчыма, я атрымаю нейкія адказы! Чаму ён не адчыняе дзверы?</Entry>
+    <Entry Name="EventMonsterBlood">Я... Я думаю, што кагосьці тут цягнулі... Я ніколі раней не бачыў столькі крыві. Я... Гэта быў мой лепшы шанец атрымаць адказы. Хто там унізе?!</Entry>
+    <Entry Name="DescValve">Здаецца, што з гэтых паравых труб адбываецца невялікая ўцечка.</Entry>
+    <Entry Name="WarningSteam">Гэтая пара можа ў адно імгненне ачысціць косць ад плоці. Я ведаю, я ўжо такое бачыў.</Entry>
+    <Entry Name="DescTunnel">Падобна на тое, што гэты падвал заваліла некалькі гадоў таму. Але не так даўно нешта пракапала тут некалькі тунэляў... Божа, якая істота можа пакінуць такія сляды?</Entry>
     <Entry Name="DescLargeBox">A storage crate, for transporting ore I suppose. There's a draft coming from the base.</Entry>
-    <Entry Name="DescToolShelf">Reams of wiring.</Entry>
-    <Entry Name="DescPaintShelf">Just old paint cans, dried up long ago.</Entry>
-    <Entry Name="DescPaperPile">Years and years of reports, logs, and files, just left here to gather dust. There's probably a century of life and death right here at my feet.</Entry>
+    <Entry Name="DescToolShelf">Куча дратоў.</Entry>
+    <Entry Name="DescPaintShelf">Проста старыя банкі фарбы, даўно высахлі.</Entry>
+    <Entry Name="DescPaperPile">Шматгадовыя справаздачы, журналы і папкі проста кінулі тут, каб яны збіралі пыл. Мабыць стагоддзе жыцця і смерці ляжыць ля маіх ног.</Entry>
     <Entry Name="DescPaint">'Hospital Grey'.</Entry>
-    <Entry Name="DescWoodLocker">This wooden cabinet seems to have held up rather well over the years.</Entry>
-    <Entry Name="DescWireDoor">Finally, this must be all that's left of the basement storage. That lock looks rather worse for wear.</Entry>
-    <Entry Name="DescCoffin">These chests must be quite common.</Entry>
-    <Entry Name="EventWireDoor01">Can't open it with that lock intact.</Entry>
-    <Entry Name="DescWeb">Urgh... spiders and small places... I don't know if I can go through with this... I think i can hear the pitter patter of tiny feet...</Entry>
-    <Entry Name="DescWoodHatch">This trap door must lead deeper into the rock, to some kind of basement.</Entry>
-    <Entry Name="DescHooks">It looks like someone's removed the ladder from these hooks... with a pretty blunt saw.</Entry>
-    <Entry Name="DescPaintShelf02">Anaemic Red</Entry>
-    <Entry Name="DescPaintShelf03">Ice White</Entry>
-    <Entry Name="DescBags01">Dry, dusty old bags.</Entry>
-    <Entry Name="EventSpiderRun">Christ! Was that a spider? I... don't like spiders...</Entry>
-    <Entry Name="DescHole01">This hole isn't large enough for a man. Not that I'd go anywhere near it, even if it was. What burrowed out this tunnel?</Entry>
-    <Entry Name="EventDeathDoor01">It's locked.</Entry>
-    <Entry Name="DescCarvLighter">It's a crude representation of a scorched, writhing spider.</Entry>
-    <Entry Name="DescCarvSad">The work of either a child, or a deranged mind.</Entry>
-    <Entry Name="DescCarvTrap">This shows some kind of trap door, but I can't see where it would be...</Entry>
-    <Entry Name="DescCarvEvil">It looks like it's been carved into the wood with a knife.</Entry>
-    <Entry Name="DescCarvHappy">Well, at least this one's a little more positive, although I'd question its motivation.</Entry>
-    <Entry Name="DescTongue">It... it looks like an internal organ, maybe an animal tongue...</Entry>
-    <Entry Name="DescSpider">The largest spider I have ever seen, with its gut carved open.</Entry>
-    <Entry Name="DescEgg">If it weren't for the size of the pieces I would say that it looks like eggshells.</Entry>
-    <Entry Name="DescNails">Lot's of paper boxes with rusty nails.</Entry>
-    <Entry Name="DescDog">A horrible sight, luckily it's mummified or else the smell would have been awful.</Entry>
+    <Entry Name="DescWoodLocker">Здаецца, гэтая драўляная шафа даволі добра перажыла шмат гадоў.</Entry>
+    <Entry Name="DescWireDoor">У выніку, здаецца, гэта ўсё, што засталося ад падвальнага сховішча. Гэты замок зусім нічога не варты.</Entry>
+    <Entry Name="DescCoffin">Гэты куфар выглядае даволі звычайна.</Entry>
+    <Entry Name="EventWireDoor01">Немагчыма адкрыць не пашкодзіўшы замок.</Entry>
+    <Entry Name="DescWeb">Ух... Павукі і цесныя пакоі... Я не ведаю, ці змагу вытрываць... Я думаю, што я чую топат маленькіх ножак...</Entry>
+    <Entry Name="DescWoodHatch">Гэты люк пэўна вядзе глыбей у скалу, у нейкі падвал.</Entry>
+    <Entry Name="DescHooks">Здаецца, хтосьці аддзяліў лесвіцу ад гэтых кручкоў... Даволі тупой пілой.</Entry>
+    <Entry Name="DescPaintShelf02">Анемічна-чырвоная</Entry>
+    <Entry Name="DescPaintShelf03">Беласнежная</Entry>
+    <Entry Name="DescBags01">Сухія, пыльныя старыя сумкі.</Entry>
+    <Entry Name="EventSpiderRun">Божа! Гэта быў павук? Я... Не люблю павукоў...</Entry>
+    <Entry Name="DescHole01">Гэтая дзіра недастаткова вялікая для чалавека. Не тое, каб я хацеў туды лезці, нават калі б мог. Што зарылася ў гэтым тунэлі?</Entry>
+    <Entry Name="EventDeathDoor01">Зачынена</Entry>
+    <Entry Name="DescCarvLighter">Гэта грубы вобраз абпаленага, скручанага павука.</Entry>
+    <Entry Name="DescCarvSad">Праца альбо дзіцяці, альбо звар'яцелага розуму.</Entry>
+    <Entry Name="DescCarvTrap">Тут паказаны нейкі люк, але я не ўзгадваю, дзе гэта...</Entry>
+    <Entry Name="DescCarvEvil">Відаць, гэта высечана на дрэве нажом.</Entry>
+    <Entry Name="DescCarvHappy">Ну, прынамсі, гэты крыху больш пазітыўны, хоць я б паставіў пад сумнеў яго матывацыю.</Entry>
+    <Entry Name="DescTongue">Гэта... Гэта выглядае як унутраны орган, магчыма, язык жывёлы...</Entry>
+    <Entry Name="DescSpider">Самы вялікі павук, якога я калі-небудзь бачыў, з выразаным кішэчнікам.</Entry>
+    <Entry Name="DescEgg">Калі б не памер кавалачкаў, я б сказаў, што выглядае як яечная шкарлупа.</Entry>
+    <Entry Name="DescNails">Шмат папяровых скрынак з іржавымі цвікамі.</Entry>
+    <Entry Name="DescDog">Жудаснае відовішча, на шчасце, ён муміфікаваны, інакш бы пах быў жудасным.</Entry>
   </CATEGORY>
   <CATEGORY Name="01_03_shafts">
     <Entry Name="EventEntrance01">Засела. Я ў пастцы! Трэба выбірацца адсюль!</Entry>
