translate PersonalNotes category

--- a/Belarusian.lang
+++ b/Belarusian.lang
@@ -794,34 +794,34 @@
     <Entry Name="Red 16.07">Please... the pain has gone on for so long... all I wanted was a friend, but now the time for chit chats and marshmallows by the fire has ended, and I hope that soon, so shall my life.  I have knocked on death's door for so long, please, let him invite me in for tea.</Entry>
   </CATEGORY>
   <CATEGORY Name="PersonalNotes">
-    <Entry Name="01_09_battery_missing">The main generator won't run without its starter motor being powered.</Entry>
-    <Entry Name="01_09_broken_fuse">Something's gone wrong with the starter motor. Need to get that fixed.</Entry>
-    <Entry Name="01_07_no_panel_power">Automatic gate blocking off the rest of the mine. Need some power if I want to move it.</Entry>
-    <Entry Name="01_07_beam_door">Found a grate door leading deeper into complex - but it's barricaded with a piece of wood on the other side. Need some way to shift it.</Entry>
-    <Entry Name="01_07_storage_locked">Found what I think is the store room, but it's blocked from the other side. Need another way in.</Entry>
-    <Entry Name="01_10_need_key">Mining machine - needs ignition key.</Entry>
-    <Entry Name="01_10_need_gas">Mining machine won't start - out of gas?</Entry>
-    <Entry Name="01_18_read_uv">That blank page had some UV text on it. Password: 1371.</Entry>
+    <Entry Name="01_09_battery_missing">Галоўны генератар не будзе працаваць без забеспячэння стартара энергіяй.</Entry>
+    <Entry Name="01_09_broken_fuse">Са стартарам нешта не так. Неабходна яго адрамантаваць.</Entry>
+    <Entry Name="01_07_no_panel_power">Аўтаматычныя вароты перакрываюць астатнюю частку шахты. Трэба крыху энергіі, калі я хачу іх ссунуць.</Entry>
+    <Entry Name="01_07_beam_door">Знайшоў рашотчатыя дзверы, якія вядуць глыбей у комплекс, але яны заблакаваныя кавалкам дрэва з іншага боку. Трэба неяк яго ўбраць.</Entry>
+    <Entry Name="01_07_storage_locked">Знайшоў кладоўку, як я лічу, але яна заблакаваная з іншага боку. Трэба знайсці іншы шлях.</Entry>
+    <Entry Name="01_10_need_key">Шахцёрская машына, патрабуе ключ запальвання.</Entry>
+    <Entry Name="01_10_need_gas">Шахцёрская машына не запускаецца, недастаткова бензіну?</Entry>
+    <Entry Name="01_18_read_uv">На гэтай пустой старонцы быў ультрафіялетавы тэкст. Пароль: 1371.</Entry>
     <Entry Name="01_03_need_code">Мне трэба знайсці код ад дзвярэй майстэрні.</Entry>
     <Entry Name="01_03_need_key">Я знайшоў замкнёныя дзверы пасярод шахты.</Entry>
     <Entry Name="01_03_entrance_closed">Уваход у пячору абваліўся, павінен быць іншы выхад.</Entry>
     <Entry Name="01_03_found_exit">Я знайшоў магчымы выхад адсюль, але спачатку трэба прыбраць завалы.</Entry>
-    <Entry Name="01_04_door_with_voice">Ёсць зачыненыя дзверы ў сховішчы, з-за якіх даносяцца дзіўныя гукі.</Entry>
-    <Entry Name="01_03_tnt_need_fuse">Found a keg of explosives, but without a fuse I'll blow myself up trying to blast the exit path clear.</Entry>
-    <Entry Name="01_13_exit">A strange door with no handle or obvious way of opening it, where does it lead?</Entry>
-    <Entry Name="01_13_B_need_code">I found a door leading to the Sector C, but I need a code to unlock it.</Entry>
-    <Entry Name="01_13_B_mine_room_locked">There is something in the way behind, the door leading to Shaft 12. Another route is required to get in there.</Entry>
-    <Entry Name="01_16_hidden_note">A note with a code should be lying in one of the lockers.</Entry>
-    <Entry Name="01_16_hidden_note_found">I've found the note, but as far as I can tell there is no code written on it?</Entry>
-    <Entry Name="01_15_locate_frozen_hand">Search for John-Os remains in hopes of locating valuable clues.</Entry>
-    <Entry Name="01_14_ladder_up">The ladder in the refinery must be swung down for me to be able to climb it.</Entry>
-    <Entry Name="01_14_gateclosed">The second gate in the refinery is not functioning.</Entry>
-    <Entry Name="01_17_collect_chems">There should be six different chemicals to collect.</Entry>
-    <Entry Name="01_19_last_door">I've located the locked door that Red has been leading me to.  I need to get it open!</Entry>
-    <Entry Name="01_13_C_need_crowbar_119">The door to the incinerator is stuck, with the right tool I should be able to get it open.</Entry>
-    <Entry Name="01_19_rubble_need_blowing">I've located the rubble that's blocking the path to Red, now I need to come up with a solution to remove the rubble.</Entry>
-    <Entry Name="01_07_red_directions">Beyond the fence to the right, there should be a hole or perhaps an access point to reach further into the mine.</Entry>
-    <Entry Name="01_11_find_key_and_gas">Red spoke of a key and some "go-go juice"?</Entry>
+    <Entry Name="01_04_door_with_voice">У сховішчы ёсць зачыненыя дзверы, з-за якіх даносяцца дзіўныя гукі.</Entry>
+    <Entry Name="01_03_tnt_need_fuse">Знайшоў бочку з выбухоўкай, але без засцерагальніка я падарву сам сябе, спрабуючы прабурыць выхад.</Entry>
+    <Entry Name="01_13_exit">Дзіўныя дзверы без ручкі або відавочнага спосабу адчыніць іх, куды яны вядуць?</Entry>
+    <Entry Name="01_13_B_need_code">Знайшоў дзверы, якія вядуць у сектар C, але мне патрэбны код, каб іх адчыніць.</Entry>
+    <Entry Name="01_13_B_mine_room_locked">Ззаду нешта ёсць: дзверы, якія вядуць у Тунэль 12. Патрэбны іншы шлях, каб туды патрапіць.</Entry>
+    <Entry Name="01_16_hidden_note">Нататка з кодам павінна ляжаць у адной з шафак.</Entry>
+    <Entry Name="01_16_hidden_note_found">Я знайшоў запіску, але наколькі я магу сказаць, на ёй няма кода?</Entry>
+    <Entry Name="01_15_locate_frozen_hand">Шукаць астанкі Джона-Оса ў надзеі знайсці каштоўныя падказкі.</Entry>
+    <Entry Name="01_14_ladder_up">Лесвіца з рафінарыі павінна быць адкінута ўніз, каб я мог па ёй падняцца.</Entry>
+    <Entry Name="01_14_gateclosed">Другая брама ў рафінарыі не працуе.</Entry>
+    <Entry Name="01_17_collect_chems">Тут павінны быць шэсць розных хімічных рэчываў.</Entry>
+    <Entry Name="01_19_last_door">Я знайшоў зачыненыя дзверы, да якіх мяне вёў Рэд.  Мне трэба іх адчыніць!</Entry>
+    <Entry Name="01_13_C_need_crowbar_119">Дзверы да спальвальніка не адчыняюцца, з правільнымі інструментамі ў мяне б атрымалася. </Entry>
+    <Entry Name="01_19_rubble_need_blowing">Я знайшоў завалы, якія перакрываюць шлях да Рэда, цяпер мне трэба прыдумаць, як іх прыбраць.</Entry>
+    <Entry Name="01_07_red_directions">Справа за агароджай павінна быць дзірка або, магчыма, які іншы спосаб патрапіць далей у шахту.</Entry>
+    <Entry Name="01_11_find_key_and_gas">Рэд казаў пра ключ і нейкі "уперад-сок"?</Entry>
   </CATEGORY>
   <CATEGORY Name="01_18_mining_room">
     <Entry Name="UnderDoor">There's about a half inch gap under the door, but the connecting room's pitch black.</Entry>
