fix minor mistakes

--- a/Belarusian.lang
+++ b/Belarusian.lang
@@ -181,7 +181,7 @@
     <Entry Name="NoteBaseEntry">Welcome to the Shelter</Entry>
     <Entry Name="NoteBaseEntryDesc">Seems like a list of staff.</Entry>
     <Entry Name="NoteSpiderHater2">Навуковыя знаходкі 1</Entry>
-    <Entry Name="NoteSpiderHater2Desc">Некія штодзённыя запісы.</Entry>
+    <Entry Name="NoteSpiderHater2Desc">Нейкія штодзённыя запісы.</Entry>
     <Entry Name="NoteSpiderHater3Desc">Нейкі журнал.</Entry>
     <Entry Name="NoteSpiderHater3">Навуковыя знаходкі 2</Entry>
   </CATEGORY>
@@ -271,7 +271,7 @@
     <Entry Name="TutorialHammer03">Здаецца, калі зацісну "</Entry>
     <Entry Name="TutorialHammer05">ПАДКАЗА: Penumbra Overture збалансавана для размахвання зброяй з дапамогай мышкі, але калі гэта здаецца занадта няёмкім, можна выбраць простую версію з меню опцый. Проста памятайце, што патрабуецца некаторы час, каб прывыкнуць да новай сістэмы, таму дайце ёй шанец, перш чым мяняць яе.</Entry>
     <Entry Name="DescRation">Гэта сутачны рацыён, тэрмін прыдатнасці якога даўно мінуў.</Entry>
-    <Entry Name="DescAmmoBox">Пустыя скрыні з-пад патронаў... што гэта за месца?</Entry>
+    <Entry Name="DescAmmoBox">Пустыя скрыні з-пад патронаў... Што гэта за месца?</Entry>
     <Entry Name="DescOldShelfs">Гэтыя паліцы такія ж старыя, як і ўсё астатняе тут, магчыма, ніхто тут не быў ужо гадоў 50.</Entry>
   </CATEGORY>
   <CATEGORY Name="01_05_office">
@@ -542,7 +542,7 @@
     <Entry Name="DescValve">Здаецца, што з гэтых паравых труб адбываецца невялікая ўцечка.</Entry>
     <Entry Name="WarningSteam">Гэтая пара можа ў адно імгненне ачысціць косць ад плоці. Я ведаю, я ўжо такое бачыў.</Entry>
     <Entry Name="DescTunnel">Падобна на тое, што гэты падвал заваліла некалькі гадоў таму. Але не так даўно нешта пракапала тут некалькі тунэляў... Божа, якая істота можа пакінуць такія сляды?</Entry>
-    <Entry Name="DescLargeBox">A storage crate, for transporting ore I suppose. There's a draft coming from the base.</Entry>
+    <Entry Name="DescLargeBox">Скрыня для транспарціроўкі руды, мяркую. Знізу адчуваецца скразняк.</Entry>
     <Entry Name="DescToolShelf">Куча дратоў.</Entry>
     <Entry Name="DescPaintShelf">Проста старыя банкі фарбы, даўно высахлі.</Entry>
     <Entry Name="DescPaperPile">Шматгадовыя справаздачы, журналы і папкі проста кінулі тут, каб яны збіралі пыл. Мабыць стагоддзе жыцця і смерці ляжыць ля маіх ног.</Entry>
@@ -593,7 +593,7 @@
     <Entry Name="DescPile02">Не ведаю, што ў гэтым мяшках. Мабыць нейкі шлак...</Entry>
     <Entry Name="DescMachine">Гэтая старая бетонамяшалка пабачыла жыццё.</Entry>
     <Entry Name="DescStuff">Шмат бескарыснага смецця. У лепшым выпадку, гэта будзе прыстойным сховішчам.</Entry>
-    <Entry Name="TutorialSneak01">Тут можа жыць што невядома хто. Гераізм для галівудскіх актораў і герояў казак. Я рызыкаваць не буду - калі сустрэнуся з чымсьці тут, то не пратрымаюся і секунды. Асцярожнасць і скрытнасць цяпер - мая адзіная абарона.</Entry>
+    <Entry Name="TutorialSneak01">Тут можа жыць невядома што. Гераізм для галівудскіх актораў і герояў казак. Я рызыкаваць не буду - калі сустрэнуся з чымсьці тут, то не пратрымаюся і секунды. Асцярожнасць і скрытнасць цяпер - мая адзіная абарона.</Entry>
     <Entry Name="TutorialSneak02_1">Калі хтосьці, ці штосьці пачуе мяне, лепей будзе трымацца далей ад ягоных вачэй, пакуль не разбяруся, ці ёсць якая пагроза. Прыгнуўшыся націскаючы на '</Entry>
     <Entry Name="TutorialSneak02_2">' я атрымаю магчымасць схавацца ў цені. Я зразумею, што зрабіў усё правільна па блакітнаму адценню свайго зроку. Таксама, трэба заставацца дастаткова ціхім, каб мяне ніхто не пачуў, калі ён толькі не падыдзе ўсутыч. Лепш не забыцца выключыць усе крыніцы святла, аднак.</Entry>
     <Entry Name="TutorialSneak03">Мой лепшы варыянт - гэта схавацца на пару секунд ці каля таго і не варушыцца. Так я буду дастаткова схаваным.</Entry>
@@ -976,7 +976,7 @@
   </CATEGORY>
   <CATEGORY Name="LoadTexts">
     <Entry Name="00_01_to_01_01">Як толькі я зышоў з лодкі, ступаючы ў мяцеліцу, якая стваралася вакол мяне, я ўсвядоміў, як моцна я быў адданы пошукам мінулага свайго бацькі. Я не ўяўляў, чаго чакаць.[br][br]Хутка мае боязі сцвердзіліся. Я не ведаю, што страціў першым, арыентацыю ці свой дух, але хутка я страціў і чуллівасць у канечнасцях, і ведаў, што ў мяне развівалася гіпатэрмія. Я пачаў шукаць укрыццё.</Entry>
-    <Entry Name="01_02_to_01_03">Куды б я ні спускаўся, яно было за сто футаў пад зямлёй, пад абаронаю двух трывалых металічных люкаў, размешчаных у аддаленай арктычнай глушы і пахаваных пад снегам. Я не ведаў, чаго чакаць, але гэта прымусіла мяне адчуць нешта такое, што я не адчуваў з самога дзяцінства.[br][br] Раней я ніколі не задумваўся над гэтым, але зразумеў, што ўсё нашае грамадства - гэта сетка бяспекі: экстранныя службы на канцы тэлефоннай лініі; здароўе і бяспека на працоўным месцы; сябры; палюбоўнікі. Усё тут, на выпадак, калі нешта пойдзе не так, частка старанна распрацаванай структуры, каб пазбегнуць усяго, акрамя самых звычайных эмоцый. [br][br]Зноў жа, я адчуваў сябе таксама як і ў школе, знаходзячыся ў атачэнні старэйшых дзяцей, ведаючы, што ўсе, хто мог мне дапамагчы - сябры, бацькі, настаўнікі - былі занадта напалоханыя або занадта далёка.</Entry>
+    <Entry Name="01_02_to_01_03">    Куды б я ні спускаўся, яно было за сто футаў пад зямлёй, пад абаронаю двух трывалых металічных люкаў, размешчаных у аддаленай арктычнай глушы і пахаваных пад снегам. Я не ведаў, чаго чакаць, але гэта прымусіла мяне адчуць нешта такое, што я не адчуваў з самога дзяцінства.[br][br]    Раней я ніколі не задумваўся над гэтым, але зразумеў, што ўсё нашае грамадства - гэта сетка бяспекі: экстранныя службы на канцы тэлефоннай лініі; здароўе і бяспека на працоўным месцы; сябры; палюбоўнікі. Усё тут, на выпадак, калі нешта пойдзе не так, частка старанна распрацаванай структуры, каб пазбегнуць усяго, акрамя самых звычайных эмоцый. [br][br]    Зноў жа, я адчуваў сябе таксама як і ў школе, знаходзячыся ў атачэнні старэйшых дзяцей, ведаючы, што ўсе, хто мог мне дапамагчы - сябры, бацькі, настаўнікі - былі занадта напалоханыя або занадта далёка.</Entry>
     <Entry Name="Loading">Загрузка...</Entry>
     <Entry Name="ClickToContinue">Націсніце, каб працягнуць.</Entry>
     <Entry Name="01_03_to_01_07">When I look back, I can't think what spurred me to go deeper into the mine. Perhaps it was arrogance at still being alive; or something as ridiculous as facing adversity, and coming out on top. [br][br]Now, I know I would have been better off starving, or being mauled to death, than kick starting the chain of events that lead me to end up here, writing to you. I just hope, once you understand my story, you will have what's necessary to put an end to this tale.[br][br]I certainly didn't.</Entry>
