translate Save category

--- a/Belarusian.lang
+++ b/Belarusian.lang
@@ -485,23 +485,23 @@
     <Entry Name="CombineGasolineHammer">Phew... got the lid off.</Entry>
   </CATEGORY>
   <CATEGORY Name="Save">
-    <Entry Name="AfterSave_01">Urgh, what the hell? What just happened? I don't know if that was such a good idea.</Entry>
-    <Entry Name="AfterSave_03">These must be tied into what's going on here. If I keep experimenting, I may discover something useful. Or have a heart attack.</Entry>
-    <Entry Name="AfterSave_02">It was different... but the same, that time. Like, I had more control - but over what?</Entry>
-    <Entry Name="AfterSave_04">Hmm... it feels as if I'm leaving my body for just a moment... but not just hovering around, it's like I go some place. What are these things?!</Entry>
-    <Entry Name="AfterSave_05">I felt something that time, that I didn't feel before, but I'm sure it's always been there. It's as if a small part of me is still trapped inside the artefact.</Entry>
-    <Entry Name="AfterSave_06">I suppose I can trust these things a bit more, I'm not dead yet. Still, they must have a purpose, what could it be?</Entry>
-    <Entry Name="AfterSave_07">When I use these now, I feel as if I'm not the only one. It's getting crowded in there, like I'm just one visitor of many. Strange thing is, they all seem familiar.</Entry>
-    <Entry Name="AfterSave_08">They're... it's me. I'm inside that box. And outside it. I don't... I can't get things straight in my head.</Entry>
-    <Entry Name="AfterSave_09">It's like there's a carbon copy of me inside the artefact. Except that there's more than one, and they're not very good copies.</Entry>
-    <Entry Name="AfterSave_10">If I never see another of these things... I don't know. I don't like them, but at the same time, I know that I'm leaving a part of myself behind each time I go near them. Can I just leave it here?</Entry>
-    <Entry Name="DefaultDesc">It's an old artefact.</Entry>
-    <Entry Name="AfterSave_Default">I may never get used to that.</Entry>
-    <Entry Name="Flashback01">A man. An old man, clutching something unseen. He is strange, and yet, he is no stranger. Never seen before, still I know, this man before me is Howard. I call him father.</Entry>
-    <Entry Name="Flashback02">The man still clutching, still looking, for what? Before him lies metal, jutting awkward from earth. A hatch, a portal, a hole, a door. Unfamiliar text. Who are these figures, huddled around? What secrets are hidden behind the faces of men?</Entry>
-    <Entry Name="Flashback03">From out the door rises something vast, something terrible. It strikes a man, knocking him down, and those standing by him wither, into the darkness. Screaming begings, still father looks on. Is he bringing this? Father, what have you done?</Entry>
-    <Entry Name="Flashback04">A cohort, a man with no name. It is he who opens this gateway to hell. A grin on his face, he is terrible indeed, he watches the men writhe, and turn. Still, father looks on, something vital in his hand.</Entry>
-    <Entry Name="Flashback05">The chains on his arms are visible now. Not there out of choice, father looks on aghast. He clutches some notes, shaking hands. He knows! He knows what has come, what the man has released. The only one who could stop it, Howard knows the real fear.</Entry>
+    <Entry Name="AfterSave_01">Угх, якога чорта? Што адбылося? Не думаю, што гэта было такой добрай ідэяй.</Entry>
+    <Entry Name="AfterSave_03">Ён павінны быць звязаны з тым, што тут адбываецца. Калі працягну эксперыментаваць, можа даведаюся што-небудзь карыснае. Або атрымаю сардэчны прыступ.</Entry>
+    <Entry Name="AfterSave_02">Адчувалася па-іншаму... Але аднолькава, у той жа час. Нібы ў мяне быў большы кантроль, але над чым?</Entry>
+    <Entry Name="AfterSave_04">Хмм... Такое адчуванне, што я пакідаю сваё цела на імгненне... Але не проста лунаю вакол, а быццам лячу ў нейкае месца. Што гэта такое?! </Entry>
+    <Entry Name="AfterSave_05">У гэты раз я адчуў нешта, чаго раней не адчуваў, але я ўпэўнены, што яно заўсёды было побач. Быццам невялікая частка мяне захрасла ўнутры артэфакта.</Entry>
+    <Entry Name="AfterSave_06">Мяркую, што можна давяраць гэтым рэчам крыху больш, я ўсё яшчэ не памёр. Тым не менш, яны для чагосьці патрэбныя, для чаго?</Entry>
+    <Entry Name="AfterSave_07">Калі я выкарыстоўваю іх зараз, я адчуваю, што я не адзін. Там становіцца цесна, быццам я проста адзін наведвальнік з многіх. Дзіўна, усе яны здаюцца знаёмымі.</Entry>
+    <Entry Name="AfterSave_08">Яны... Гэта я. Я ўнутры гэтай скрынкі. І звонку. Я не... Я не магу гэта асэнсаваць.</Entry>
+    <Entry Name="AfterSave_09">Быццам мая капіравальная копія ўнутры артэфакта. У дадатак больш за адну, і яны не вельмі добрыя копіі.</Entry>
+    <Entry Name="AfterSave_10">Калі я ніколі больш не ўбачу гэтых рэчаў... Я не ведаю. Яны мне не падабаюцца, але ў той жа час я ведаю, што пакідаю частку сябе кожны раз, калі праходжу паўз іх. Можа проста пакінуць яго тут?</Entry>
+    <Entry Name="DefaultDesc">Стары артэфакт.</Entry>
+    <Entry Name="AfterSave_Default">Ніколі не звыкну да гэтага.</Entry>
+    <Entry Name="Flashback01">Чалавек. Стары, сціскае нешта нябачнае. Ён незнаёмы, але і не чужы. Ніколі раней яго не бачыў, але усё ж ведаю, чалавек перада мною - Говард. Я называю яго бацькам.</Entry>
+    <Entry Name="Flashback02">Чалавек усё яшчэ хапаецца, усё яшчэ шукае што? Перад ім на зямлі ляжыць метал, які няёмка выступае з зямлі. Люк, партал, дзіра, дзверы. Незнаёмы тэкст. Хто гэтыя прытуленыя фігуры? Якія сакрэты схаваныя за тварамі гэтых людзей?</Entry>
+    <Entry Name="Flashback03">З-за дзвярэй узвышаецца нешта велізарнае, нешта жудаснае. Яно б'е чалавека, збіваючы яго з ног, а тыя, хто стаіць побач з ім, знікаюць у цемры. Пачынаюцца крыкі, бацька ўсё яшчэ глядзіць. Ён пачаў гэта? Бацька, што ты зрабіў?</Entry>
+    <Entry Name="Flashback04">Кагорта, чалавек без імені. Гэта ён адчыняе браму ў пекла. Усмешка на твары, ён сапраўды жудасны, ён назірае, як людзі курчацца, і паварочваецца. Тым не менш, бацька глядзіць, нешта важнае ў яго руцэ.</Entry>
+    <Entry Name="Flashback05">Цяпер бачна ланцугі на яго руках. Па сваёй волі, бацька глядзіць з жахам. Ён хапае некалькі нататак, паціскае некалькі рук. Ён ведае! Ён ведае, што з'явілася, што гэты чалавек вызваліў. Адзіны, хто мог гэта спыніць, Говард зазнае сапраўдны страх.</Entry>
   </CATEGORY>
   <CATEGORY Name="SaveNames">
     <Entry Name="level01_05_office">Old office</Entry>
